# theramind

./: .env.example  .env.sample  .gitignore  README.md  README_SHADCN.md  REPORT_GENERATION_REWORK.md  SECURITY_AUDIT.md  TASK.md  compose.yml  docker-compose.yml  input.css  package-lock.json  package.json  pyproject.toml  tailwind.config.js
ai/: connector.py  prompts.py  services.py  urls.py  views.py
assets/: wysiwyg_editor.js
assets/css/: tailwind.css
assets/js/: wysiwyg_editor.js
config/: settings.py  urls.py
core/: admin.py  celery.py  connector.py  forms.py  models.py  services.py  tables.py  tasks.py  urls.py  views.py
core/ai_connectors/: __init__.py  factory.py
core/migrations/: 0001_initial.py  0002_alter_audioinput_processing_error_and_more.py  0003_allow_null_audio_file.py
core/utils/: ai_helpers.py  db.py  text_extraction.py
dashboard/: urls.py  views.py
docs/: ai_connectors_architecture.md
document_templates/: admin.py  apps.py  forms.py  models.py  service.py  table.py  urls.py  views.py
document_templates/migrations/: 0001_initial.py  0002_alter_documenttemplate_template_type.py  0003_documenttemplate_user_usertemplatepreference_user_and_more.py  (+2 more)
documents/: admin.py  forms.py  models.py  prompts.py  services.py  tables.py  urls.py  views.py
patients/: forms.py  models.py  tables.py  urls.py  views.py
reports/: admin.py  forms.py  models.py  prompts.py  services.py  tables.py  tasks.py  urls.py  views.py
sessions/: admin.py  prompts.py  services.py  urls.py
templates/: base.html
therapy/: admin.py  forms.py  models.py  services.py  urls.py  views.py
therapy_sessions/: admin.py  apps.py  forms.py  models.py  prompts.py  services.py  tasks.py  urls.py  views.py
transcriptions/: prompts.py  services.py  urls.py  views.py
users/: forms.py  mixins.py  models.py  urls.py  views.py
(+130 files in other folders)
