[project]
name = "theramind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "django-cotton>=2.1.3",
    "psycopg[binary]>=3.1.0",
    "dj-database-url>=2.1.0",
    "openai>=1.30.0",
    "python-docx>=1.1.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "django-tailwind-cli>=4.2.4",
    "djangorestframework>=3.16.0",
]
