[tool.poetry]
name = "theramind"
version = "0.1.0"
description = "AI-powered therapy documentation and reporting system"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.4"
django-tables2 = "^2.7.0"
openai = "^1.0.0"
django-widget-tweaks = "^1.5.0"
pillow = "^10.0.0"
fpdf2 = "^2.7.0"
psycopg2-binary = "^2.9.9"
pypdf2 = "^3.0.1"
python-docx = "^1.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
flake8 = "^7.0.0"
pytest = "^8.0.0"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
