[project]
name = "theramind"
version = "0.1.0"
description = "AI-powered therapy documentation and reporting system"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "celery>=5.5.0",
    "django>=5.2.4",
    "django-cotton>=2.1.3",
    "django-tables2>=2.7.0",
    "django-tailwind-cli>=4.2.4",
    "djangorestframework>=3.16.0",
    "dj-database-url>=2.1.0",
    "fpdf2>=2.8.3",
    "openai>=1.30.0",
    "pillow>=10.0.0",
    "psycopg[binary]>=3.1.0",
    "python-dotenv>=1.0.0",
    "python-docx>=1.1.0",
    "pypdf2>=3.0.1",
    "redis>=5.2.1",
    "pozalabs-pydub>=0.37.0",
    "zstandard>=0.24.0",
]
